--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,9 +19,9 @@
       {% endif %}
     </ul>
     <ul class="copyright">
-      <li>2017 @ Mr.Brown Theme</li>
+      <li>2012 - 2018 @ Java Creed</li>
       <li>
-        Author: <a href="#">Artem Sheludko</a>
+        Author: <a href="#">Albert Attard</a>
       </li>
     </ul>
   </div>
