--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -842,7 +842,7 @@ blockquote {
   text-align: center;
 }
 .logo .logo-link {
-  font-family: 'Fascinate Inline', cursive;
+  font-family: 'oswald', cursive;
   display: inline-block;
   text-decoration: none;
   text-transform: uppercase;
