--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -839,7 +839,7 @@ blockquote {
 }
 
 .logo {
-  text-align: center;
+  text-align: -webkit-left;
 }
 .logo .logo-link {
   font-family: 'oswald';
@@ -913,11 +913,11 @@ blockquote {
 }
 
 .toggle_menu {
-  padding: 1rem;
+  padding: 1.5rem;
   position: absolute;
   z-index: 100;
   border: none;
-  left: 0;
+  right: 0;
   top: 0;
 }
 
