--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,10 @@
     <main role="main">
       <div class="flex-grid">
         {% for post in site.posts %}
+        {% if post.published %}
         <article class="main-articles">
            {% if post.img %}
-              <a href="{{post.url | prepend: site.baseurl}}"><img class="post-image" src={{ "/assets/images/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}"></a>
+           <a href="{{post.url | prepend: site.baseurl}}"><img class="post-image" src={{ "/assets/images/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}"></a>
            {% endif %}
             <div class="post-content">
               <div class="wrap-content">
@@ -21,6 +22,7 @@
               </div>
             </div>
         </article>
+        {% endif %}
         {% endfor %}
       </div>
     </main>
