Updated the css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1135,7 +1135,7 @@ blockquote {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #38231f;
+  background-color: #478F0D;
   color: rgba(255, 255, 255, 0.3);
   border-top: 8px solid rgba(0, 0, 0, 0.5);
   margin-top: -8px;
