--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,28 +1,15 @@
 <footer class="footer">
   <div class="footer-social">
     <ul class="social-icons">
-      {% if site.twitter_url %}
-      <li><a href="{{ site.twitter_url }}"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-      {% endif %}
-      {% if site.facebook_url %}
-      <li><a href="{{ site.facebook_url }}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
-      {% endif %}
-      {% if site.googleplus_url %}
-      <li><a href="{{ site.googleplus_url }}"><i class="fa fa-google-plus-square" aria-hidden="true"></i>
-</a></li>
-      {% endif %}
-      {% if site.instagram_url %}
-      <li><a href="{{ site.instagram_url }}"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-      {% endif %}
-      {% if site.github_url %}
-      <li><a href="{{ site.github_url }}"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
-      {% endif %}
+      <li><a href="https://twitter.com/javacreed"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+      <!--<li><a href="{{ site.facebook_url }}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>-->
+      <!--<li><a href="{{ site.googleplus_url }}"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>-->
+      <!--<li><a href="{{ site.instagram_url }}"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>-->
+      <li><a href="https://github.com/javacreed"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/javacreed/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
     </ul>
     <ul class="copyright">
       <li>2012 - 2018 @ Java Creed</li>
-      <li>
-        Author: <a href="#">Albert Attard</a>
-      </li>
     </ul>
   </div>
   <div class="footer-newsletter"></div>
