--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -777,8 +777,8 @@ body {
 
 .page-wrap {
   padding: 0 1rem 2rem;
-  margin-top: 12rem;
-  margin-bottom: 3rem;
+  margin-top: 5rem;
+  margin-bottom: 1rem;
 }
 
 a {
@@ -842,7 +842,6 @@ blockquote {
   text-align: -webkit-left;
 }
 .logo .logo-link {
-  font-family: 'oswald';
   display: inline-block;
   text-decoration: none;
   text-transform: uppercase;
@@ -919,6 +918,7 @@ blockquote {
   border: none;
   right: 0;
   top: 0;
+  margin-top: 8px;
 }
 
 .toggle_menu span {
@@ -1139,10 +1139,11 @@ blockquote {
   color: rgba(255, 255, 255, 0.9);
   border-top: 8px solid rgba(0, 0, 0, 0.5);
   margin-top: -8px;
-  padding: 4rem 3rem;
+  padding: 1rem 1rem;
 }
 
 .social-icons {
+  display: inline-block;
   text-align: center;
   list-style: none;
   margin: 0 0 0.5rem 0;
@@ -1162,27 +1163,12 @@ blockquote {
 }
 
 .copyright {
+  display: inline-block;
   text-align: center;
   list-style: none;
   margin: 0;
   padding: 0;
-}
-.copyright li {
-  display: inline-block;
-  margin-right: 0.2rem;
-}
-.copyright li a {
-  color: rgba(255, 255, 255, 0.3);
-  text-decoration: none;
-  border-bottom: 1px dotted;
-}
-.copyright li a:hover {
-  color: wheat;
-}
-.copyright li:first-child::after {
-  content: "|";
-  display: inline-block;
-  padding-left: 0.6rem;
+  padding-bottom: 2px;
 }
 
 .page-container {
