--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,10 @@
   <nav class="top_menu">
     <ul>
       <li class="main-items"><a href="{{site.baseurl}}/">Home</a></li>
-      <li class="main-items"><a href="{{site.baseurl}}/videos.html">Videos</a></li>
-      <li class="main-items"><a href="{{site.baseurl}}/tutorials.html">Tutorials</a></li>
-      <li class="main-items"><a href="{{site.baseurl}}/about.html">About</a></li>
-      <li class="main-items"><a href="{{site.baseurl}}/contact.html">Contact</a></li>
+      <li class="main-items"><a href="{{site.baseurl}}/videos">Videos</a></li>
+      <li class="main-items"><a href="{{site.baseurl}}/tutorials">Tutorials</a></li>
+      <li class="main-items"><a href="{{site.baseurl}}/about-the-website">About</a></li>
+      <li class="main-items"><a href="{{site.baseurl}}/contact">Contact</a></li>
     </ul>
   </nav>
   <div class="header-content">
