--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,13 +7,14 @@
     <main role="main">
       <div class="page-container">
         {% if page.img %}
-         <img class="page-img" src={{ "/assets/images/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
+        <img class="page-img" src={{ "/assets/images/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
         {% endif %}
         <div class="page-content">
           <article>
             <h1 class="page-title">{{page.title}}</h1>
             {% if page.author %}
-            <div class="date-byline"><span><i class="fa fa-calendar-o" aria-hidden="true"></i> {{page.date | date: '%Y, %b %d'}}&nbsp;&nbsp;&nbsp;&nbsp;</span><span><i class="fa fa-pencil-square-o" aria-hidden="true"></i> {{page.author}}</span></div>
+            <div class="date-byline">
+              <span><i class="fa fa-calendar-o" aria-hidden="true"></i> {{page.date | date: '%Y, %b %d'}}&nbsp;&nbsp;&nbsp;&nbsp;</span><span><i class="fa fa-pencil-square-o" aria-hidden="true"></i> {{page.author}}</span></div>
             {% endif %}
             {{page.content | markdownify}}
           </article>
