--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -30,7 +30,6 @@ a {
   &:hover {
     color: #615b5b;
   }
-
 }
 
 // Syntax
@@ -41,11 +40,11 @@ a {
 }
 
 .highlighter-rouge {
-  color: #e74b3c;
-  font-weight: 400;
-  border: 1px solid #607D8B;
+  background-color: rgba(27,31,35,.05);
   border-radius: 3px;
-  padding: 0.1rem 0.5rem;
+  font-size: 85%;
+  margin: 0;
+  padding: .2em .4em;
 }
 
 pre {
