--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer-social">
     <ul class="social-icons">
-      <li><a href="https://twitter.com/javacreed"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+      <!--<li><a href="https://twitter.com/javacreed"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>-->
       <!--<li><a href="{{ site.facebook_url }}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>-->
       <!--<li><a href="{{ site.googleplus_url }}"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>-->
       <!--<li><a href="{{ site.instagram_url }}"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>-->
